force-app/main/default/objects/Sampling_Object__c/Sampling_Object__c.object-meta.xml
<CustomObject>
    <label>Sampling Object</label>
    <nameField>
        <label>Sampling Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sampling Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>