force-app/main/default/objects/Sampling_Object__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sampling Objects</relationshipLabel>
    <relationshipName>Sampling_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>