force-app/main/default/objects/Sampling_Object__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Sampling Objects</relationshipLabel>
    <relationshipName>Sampling_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>