force-app/main/default/objects/Sampling_Object__c/fields/Sample_Date__c.field-meta.xml
<CustomField>
    <fullName>Sample_Date__c</fullName>
    <label>Sample Date</label>
    <type>Date</type>
</CustomField>